; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_javascript.c_same_as_int64.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_javascript.c_same_as_int64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INT64_MIN = common dso_local global double 0.000000e+00, align 8
@INT64_MAX = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (double)* @same_as_int64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @same_as_int64(double %0) #0 {
  %2 = alloca double, align 8
  store double %0, double* %2, align 8
  %3 = load double, double* %2, align 8
  %4 = load double, double* @INT64_MIN, align 8
  %5 = fcmp oge double %3, %4
  br i1 %5, label %6, label %14

6:                                                ; preds = %1
  %7 = load double, double* %2, align 8
  %8 = load double, double* @INT64_MAX, align 8
  %9 = fcmp ole double %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %6
  %11 = load double, double* %2, align 8
  %12 = load double, double* %2, align 8
  %13 = fcmp oeq double %11, %12
  br label %14

14:                                               ; preds = %10, %6, %1
  %15 = phi i1 [ false, %6 ], [ false, %1 ], [ %13, %10 ]
  %16 = zext i1 %15 to i32
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
